--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@
 version: "3"
 
 services:
+
   # Spark Notebook Server
   notebook:
     image: alexmerced/spark33-notebook
@@ -25,14 +26,49 @@ services:
       - 8080:8080
       - 10000:10000
       - 10001:10001
-  # Nessie Catalog Server Using In-Memory Store
+    depends_on:
+      - minio
+
+  # Nessie Catalog Server Using JDBC Store
   nessie:
-    image: projectnessie/nessie:0.67.0
+    image: projectnessie/nessie:latest
     container_name: nessie
+    environment:
+      - JAVA_OPTS_APPEND=-Dnessie.version.store.type=JDBC -Dquarkus.datasource.jdbc.url=jdbc:postgresql://postgres:5432/db -Dquarkus.datasource.username=admin -Dquarkus.datasource.password=password
     networks:
-      iceberg:
+      - iceberg
     ports:
       - 19120:19120
+    depends_on:
+      - postgres
+  
+    # Postgres to persist Nessie Metadata
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      POSTGRES_DB: db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5435:5432"
+    networks:
+      iceberg:
+
+  # pgAdmin for managing PostgreSQL
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - iceberg
+    depends_on:
+      - postgres
+
   # Minio Storage Server
   minio:
     image: minio/minio:RELEASE.2023-07-21T21-12-44Z
@@ -49,6 +85,7 @@ services:
       - 9001:9001
       - 9000:9000
     command: ["server", "/data", "--console-address", ":9001"]
+  
   # Dremio
   dremio:
     platform: linux/x86_64
@@ -60,5 +97,6 @@ services:
     container_name: dremio
     networks:
       iceberg:
+
 networks:
   iceberg:
